RESOLVED FIXED33647
SVGClipPathElement shouldn't resolve style manually
https://bugs.webkit.org/show_bug.cgi?id=33647
Summary SVGClipPathElement shouldn't resolve style manually
Nikolas Zimmermann
Reported 2010-01-13 19:39:29 PST
SVGClipPathElement manually resolves style. We can just create a RenderSVGHiddenContainer for it, and query that style - much cleaner than hacking around the lack of renderers.
Attachments
Initial patch (46.74 KB, patch)
2010-01-13 19:43 PST, Nikolas Zimmermann
oliver: review+
Nikolas Zimmermann
Comment 1 2010-01-13 19:43:30 PST
Created attachment 46535 [details] Initial patch
Oliver Hunt
Comment 2 2010-01-13 20:06:38 PST
Comment on attachment 46535 [details] Initial patch r=me
Nikolas Zimmermann
Comment 3 2010-01-13 20:14:08 PST
Landed in r53233.
Note You need to log in before you can comment on or make changes to this bug.