2010-01-13  Nikolas Zimmermann  <nzimmermann@rim.com>

Reviewed by Oliver Hunt.

        SVGClipPathElement shouldn't resolve style manually
        https://bugs.webkit.org/show_bug.cgi?id=33647

        Build renderers for SVGClipPathElement, so we can query the style from the renderer
        instead of re-resolving style on every clip path resource invalidation.

        * svg/SVGClipPathElement.cpp:
        (WebCore::SVGClipPathElement::createRenderer):
        (WebCore::SVGClipPathElement::canvasResource):
        * svg/SVGClipPathElement.h:
        (WebCore::SVGClipPathElement::isValid):


Canonical link: https://commits.webkit.org/44641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53233 268f45cc-cd09-0410-ab3c-d52691b4dbfc